--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,12 @@
 [submodule "excons"]
 	path = excons
 	url = git://github.com/gatgui/excons.git
+[submodule "TinyXML"]
+	path = TinyXML
+	url = git://github.com/gatgui/TinyXML
+[submodule "Little-CMS"]
+	path = Little-CMS
+	url = git://github.com/gatgui/Little-CMS
+[submodule "yaml-cpp"]
+	path = yaml-cpp
+	url = git://github.com/gatgui/yaml-cpp
