added SCons build for non-OIIO dependent tools (ociochecklut, ociomakeclf, ociowrite)

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "pybind11"]
 	path = pybind11
 	url = git://github.com/pybind/pybind11
+[submodule "glew"]
+	path = glew
+	url = git://github.com/gatgui/glew
