--- a/.gitmodules
+++ b/.gitmodules
@@ -1,27 +1,27 @@
 [submodule "excons"]
 	path = excons
-	url = git://github.com/gatgui/excons.git
+	url = git@github.com:marza-animation-planet/excons.git
 [submodule "Little-CMS"]
 	path = Little-CMS
-	url = git://github.com/gatgui/Little-CMS
+	url = git@github.com:marza-animation-planet/Little-CMS
 [submodule "yaml-cpp"]
 	path = yaml-cpp
-	url = git://github.com/gatgui/yaml-cpp
+	url = git@github.com:marza-animation-planet/yaml-cpp
 [submodule "pystring"]
 	path = pystring
 	url = git://github.com/imageworks/pystring.git
 [submodule "openexr"]
 	path = openexr
-	url = git://github.com/gatgui/openexr
+	url = git@github.com:marza-animation-planet/openexr
 [submodule "libexpat"]
 	path = libexpat
-	url = git://github.com/gatgui/libexpat
+	url = git@github.com:marza-animation-planet/libexpat
 [submodule "pybind11"]
 	path = pybind11
 	url = git://github.com/pybind/pybind11
 [submodule "glew"]
 	path = glew
-	url = git://github.com/gatgui/glew
+	url = git@github.com:marza-animation-planet/glew
 [submodule "zlib"]
 	path = zlib
-	url = git://github.com/gatgui/zlib
+	url = git@github.com:marza-animation-planet/zlib
